<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@color/black"
    tools:context=".MainActivity">

    <!-- Views -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/views"
            android:textColor="@android:color/white"
            android:textSize="17sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/number_of_views"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="normal"
            android:fontFamily="sans-serif-light"/>
    </LinearLayout>

    <Space
        android:layout_width="16dp"
        android:layout_height="wrap_content" />

    <!-- Downloads -->

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/save"
            android:textColor="@android:color/white"
            android:textSize="17sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/number_of_saves"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="normal"
            android:fontFamily="sans-serif-light"/>
    </LinearLayout>

    <Space
        android:layout_width="16dp"
        android:layout_height="wrap_content" />

    <!-- Likes -->

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/likes"
            android:textColor="@android:color/white"
            android:textSize="17sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/number_of_likes"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="normal"
            android:fontFamily="sans-serif-light"/>
    </LinearLayout>

</LinearLayout>